feat: dm, dm channel 바이너리 컨텐츠 추가